# tauri-test

./: README.md  README.txt  package.json
src/: App.tsx  index.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2022-08-20-113226_complex/: down.sql  up.sql
src-tauri/migrations/2022-08-20-113624_house/: down.sql  up.sql
src-tauri/migrations/2022-08-20-141559_apartment/: down.sql  up.sql
src-tauri/migrations/2022-08-20-145739_guests/: down.sql  up.sql
src-tauri/migrations/2022-08-21-141625_rents/: down.sql  up.sql
src-tauri/migrations/2022-08-21-144513_document/: up.sql
src-tauri/migrations/2022-08-21-145645_guest-group/: down.sql  up.sql
src-tauri/migrations/2022-08-21-153203_group/: up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src/assets/styles/: base.scss  colors.scss
src/layouts/: README.md
src/layouts/header/: BackButton.tsx  Header.tsx  LogoButton.tsx
src/models/: Apartment.ts  Guest.ts  House.ts  Rent.ts
src/pages/: README.md
src/pages/apartment/: Apartment.tsx
src/pages/choose/: ChooseApartment.tsx  ChooseHouse.tsx
src/pages/prices/: PricesTable.tsx
