[package]
name = "lecasine"
version = "0.1.0"
description = "LeCasine"
authors = ["Andrea Severi"]
license = "MIT"
repository = "https://github.com/seve-andre/LeCasineDB"
default-run = "lecasine"
edition = "2021"
rust-version = "1.58"

[lib]
name = "lecasine"
path = "src/lib.rs"

[[bin]]
name = "lecasine"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "1.4.0" }
dotenv = "0.15.0"
uuid = { version = "1.0.0", features = ["v4"] }
datafusion = { version = "8.0.0" }
thiserror = "1.0"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
